--- a/Changes
+++ b/Changes
@@ -1,15 +1,11 @@
 Revision history for Perl extension List::SkipList.
 
-0.00  Wed Nov 12 2003
-	- experimental versions, unreleased.
+0.12  Wed Nov 19 2003
+	- added validate_key and validate_node methods to Node
 
-0.01  Fri Nov 14 00:50:00 2003
-	- original version; created by h2xs 1.21 with options
-		-X -n List::SkipList -v 0.01
-
-0.02  Fri Nov 14 01:08:00 2003
-	- incorporated experimental code into module
-	- began writing initial test script
+0.11  Sun Nov 16 2003
+	- modified test script to better check next_key function
+	- bug fix: next_key did not check that $last_key existed
 
 0.10  Sat Nov 15 01:11:00 2003
 	- updated test script appropriately
@@ -20,6 +16,15 @@ Revision history for Perl extension List::SkipList.
 	- changed type checking to use isa() method
 	- updated documentation
 
-0.11  Sun Nov 16 2003
-	- modified test script to better check next_key function
-	- bug fix: next_key did not check that $last_key existed
+0.02  Fri Nov 14 01:08:00 2003
+	- incorporated experimental code into module
+	- began writing initial test script
+
+0.01  Fri Nov 14 00:50:00 2003
+	- original version; created by h2xs 1.21 with options
+		-X -n List::SkipList -v 0.01
+
+0.00  Wed Nov 12 2003
+	- experimental versions, unreleased.
+
+
