Import of RRWO/List-SkipList-0.13 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.13
gitpan-cpan-path:         RRWO/List-SkipList-0.13.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension List::SkipList.
 
+0.13  Wed Nov 19 2003
+	- added call to validate_key in key_cmp in Node
+
 0.12  Wed Nov 19 2003
 	- added validate_key and validate_node methods to Node
 
