--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension List::SkipList.
 
+0.30  Tue Dec  2 2003
+	- ability to tie hashes
+	- made some methods autoloading
+	- added last_key and reset methods to allow auto-enumeration
+	- added least, greatest, keys and values methods
+	- added _first_node, merge, append and copy methods
+	- insert now returns a finger
+	- more updates to documentation
+
 0.21  Wed Nov 26 2003
 	- bug fix: first_key method returns a proper finger
 	- added documentation and tests about memoization
