--- a/README
+++ b/README
@@ -27,18 +27,16 @@ DESCRIPTION
     More information is available in the module documentation.
 
 REVISION HISTORY
-    Changes since v0.13:
+    Changes since v0.21:
 
-    0.21  Wed Nov 26 2003
-	- bug fix: first_key method returns a proper finger
-	- added documentation and tests about memoization
-
-    0.20  Wed Nov 26 2003
-	- if no last_key specified for next_key, it returns first_key
-	- search fingers added
-	- find, first_key, next_key return a list in list context as part of
-	  support for search fingers
-	- minor changes to documentation
+    0.30  Tue Dec  2 2003
+	- ability to tie hashes
+	- made some methods autoloading
+	- added last_key and reset methods to allow auto-enumeration
+	- added least, greatest, keys and values methods
+	- added _first_node, merge, append and copy methods
+	- insert now returns a finger
+	- more updates to documentation
 
 CAVEATS
     This is a prototype module and may contain bugs.
