Import of RRWO/List-SkipList-0.31 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.31
gitpan-cpan-path:         RRWO/List-SkipList-0.31.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension List::SkipList.
 
+0.31  Fri Feb 13 2004
+	- removed memoized node example from POD
+	- reformatted E-mail addresses in various files to foil
+	  spam harvesters
+	- changes calls to keys to CORE::keys [Bug 5317]
+	- added version to List::SkipList::Node
+	- corrected errors in POD formatting
+	- corrected and updated POD
+	- added META.yml file to distribution
+
 0.30  Tue Dec  2 2003
 	- ability to tie hashes
 	- made some methods autoloading
