Import of RRWO/List-SkipList-0.32 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.32
gitpan-cpan-path:         RRWO/List-SkipList-0.32.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension List::SkipList.
 
+0.32  Mon Mar 15 2004
+	- renamed test.pl to t/01-SkipList.t
+	- added Build.PL to distribution
+        - updated README
+	- corrected and updated POD
+
 0.31  Fri Feb 13 2004
 	- removed memoized node example from POD
 	- reformatted E-mail addresses in various files to foil
