Import of RRWO/List-SkipList-0.33 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.33
gitpan-cpan-path:         RRWO/List-SkipList-0.33.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -72,6 +72,11 @@ DESCRIPTION
 REVISION HISTORY
     Changes since v0.31:
 
+    0.33  Tue Mar 16 2004
+	- fixed typos in test cases that caused Makefile tests to fail
+	- removed causes of warnings in 01-SkipList.t
+	- replaced explicit package names with __PACKAGE__ placeholder
+
     0.32  Mon Mar 15 2004
 	- renamed test.pl to t/01-SkipList.t
 	- added Build.PL to distribution
