--- a/README
+++ b/README
@@ -76,6 +76,9 @@ DESCRIPTION
 REVISION HISTORY
     Changes since v0.40:
 
+    0.42  Sat Mar 20 2004
+	- fixed bug with Build.PL not autospliting files
+
     0.41  Fri Mar 19 2004
 	* List::SkipList::Node is now array-based rather than hash-based
 	  to improve speed.
