--- a/Changes
+++ b/Changes
@@ -1,6 +1,16 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.51  Mon Apr 12 2004
+	- fixed bug with next_key method called without first_key
+	- added tests for this bug
+	- added "heavy" test to distribution
+	- minor optimizations of delete method
+	- assertions are no longer required (which leads to ~3% speedup)
+	  and removed section in POD about assertions
+	- removed commented-out references to forward method
+	- minor updates to source code comments
+
 0.50  Mon Mar 29 2004
 	- section about Assertions added to POD
 	- documented level() method
