--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.62  Tue May 18 2004
+	- fixed typo in (commented-out) assertion
+	- additional minor optimizations and code cleanup
+
 0.61  Mon May 17 2004
 	* find no longer returns a finger in array context
 	* header is now a special subclass of List::SkipList::Node
