Import of RRWO/List-SkipList-0.64 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.64
gitpan-cpan-path:         RRWO/List-SkipList-0.64.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.64 Thu June  3 2004
+        - updated examples in documentation of custom node
+	- minor optimizations and code cleanup
+	- commented-out call to prev() in _debug
+	- removed use of Carp::Assert in tests
+	- redesigned benchmark script and included parse-out.pl
+	- updated Benchmark.txt
+	- updated README
+
 0.63  Fri May 28 2004
 	- The default value of P is now 0.25, which appears to yield
 	  better results in tests.
