Import of RRWO/List-SkipList-0.65 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.65
gitpan-cpan-path:         RRWO/List-SkipList-0.65.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.65 Thu June  3 2004
+	- updated README
+
 0.64 Thu June  3 2004
         - updated examples in documentation of custom node
 	- minor optimizations and code cleanup
